fix(frontend): icon alignment

--- a/packages/frontend/components/icon/styles.css
+++ b/packages/frontend/components/icon/styles.css
@@ -3,13 +3,10 @@
   display: inline-block;
   flex-shrink: 0;
   inline-size: var(--icon-size, 1em);
+  inset-block-start: -0.0625em;
   margin-inline-end: var(--icon-margin, var(--space-xs));
   position: relative;
-  vertical-align: text-bottom;
-}
-
-svg.icon {
-  inset-block-start: -1px;
+  vertical-align: middle;
 }
 
 .icon--rounded {
