--- a/packages/frontend/components/widget/styles.css
+++ b/packages/frontend/components/widget/styles.css
@@ -15,7 +15,6 @@
 }
 
 .widget__header {
-  --icon-size: 1.5rem;
   align-items: center;
   display: flex;
   flex-wrap: wrap;
@@ -25,5 +24,6 @@
 }
 
 .widget__title {
+  --icon-size: 1.5em;
   font: var(--font-label);
 }
